--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
+    "tinybench": "^2.8.0",
     "ts-jest": "^29.1.3",
     "tsx": "^4.11.0"
   }
