--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,8 @@
     "titleBar.inactiveBackground": "#17448599",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#174485"
+  "peacock.color": "#174485",
+  "python.testing.pytestArgs": ["returned"],
+  "python.testing.unittestEnabled": false,
+  "python.testing.pytestEnabled": true
 }
