--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "tinybench": "^2.9.0",
-    "ts-jest": "^29.4.5",
-    "tsx": "^4.20.6"
+    "ts-jest": "^29.4.5"
   }
 }
