--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
     "tinybench": "^2.9.0",
-    "ts-jest": "^29.4.5"
+    "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2"
   }
 }
